--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
             <div id="navbar">
                 <ul class="navlinks">
                     <li><a href="./index.html" class="subHeading ">HOME</a></li>
-                    <li><a href="" class="subHeading">EVENT</a></li>
+                    <li><a href="./event.html" class="subHeading">EVENT</a></li>
                     <li><a href="./blog.html" class="subHeading current">BLOGS</a></li>
                     <li> <a href="./contact.html" class="subHeading">CONTACT US</a></li>
                 </ul>
@@ -42,6 +42,7 @@
                 <div class="line3"></div>
             </div>
         </div>
+        <span id="bloggg">BLOG</span>
     </section>
     <div class="p1p">
         <div class="content1">
