--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                 <div id="navbar">
                     <ul class="navlinks">
                         <a href="./index.html" class="subHeading">HOME</a>
-                        <a href="" class="subHeading">EVENT</a>
+                        <a href="./event.html" class="subHeading">EVENT</a>
                         <a href="./blog.html" class="subHeading">BLOGS</a>
                         <a href="./contact.html" class="subHeading current">CONTACT US</a>
                     </ul>
@@ -121,7 +121,7 @@
             <a class="copy1">COPYRIGHT &copy;</a>
             <a class="copy2"> Reserved</a>
             <a class="con1" href="../contactus/contact.html">Contact Us</a>
-            <a href="#" class="secondaryText">ROBONAUTS</a>
+            <a href="#" class="secondaryText con3">ROBONAUTS</a>
             <a class="con2">IIITN</a>
         </div>
     </footer>
