--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="navbar">
                 <ul class="navlinks">
                     <li><a href="index.html" class="subHeading current">HOME</a></li>
-                    <li><a href="" class="subHeading">EVENT</a></li>
+                    <li><a href="./event.html" class="subHeading">EVENT</a></li>
                     <li><a href="./blog.html" class="subHeading">BLOGS</a></li>
                     <li> <a href="./contact.html" class="subHeading">CONTACT US</a></li>
                 </ul>
