--- a/event.html
+++ b/event.html
@@ -33,8 +33,8 @@
         </div>
         <div id="navbar">
             <ul class="navlinks">
-                <li><a href="index.html" class="subHeading current">HOME</a></li>
-                <li><a href="./event.html" class="subHeading">EVENT</a></li>
+                <li><a href="index.html" class="subHeading ">HOME</a></li>
+                <li><a href="./event.html" class="subHeading current">EVENT</a></li>
                 <li><a href="./blog.html" class="subHeading">BLOGS</a></li>
                 <li> <a href="./contact.html" class="subHeading">CONTACT US</a></li>
             </ul>
