--- a/event.html
+++ b/event.html
@@ -107,7 +107,7 @@
                             <span class="numbertext primaryText">2/2</span>
                             <a class="next" onclick="plusSlides(1)">&#10095;</a>
                         </div>
-                        <h2 class="secondaryText">by DR.Debrank Roy</h2>
+                        <h2 class="secondaryText">by DR.Debanik Roy</h2>
                         <h1 class="primaryText">SPEAKER SESSIONS!</h1>
                     </div>
                     <div class="speakerPhoto">
