--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <!-- <li><pre class="subHeading">ROBONAUTS</pre></li> -->
             </div>
             <h3 class="secondaryText">16th OCTOBER,2021 </h3>
-            <a href="">Expore Events</a>
+            <a href="./event.html">Expore Events</a>
         </div>
     </section>
     <div class="content">
