--- a/event.html
+++ b/event.html
@@ -78,6 +78,34 @@
                     <div class="speaker">
                         <div class="butn">
                             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                            <span class="numbertext primaryText">2/2</span>
+                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                        </div>
+                        <h2 class="secondaryText">by DR.Debanikk Roy</h2>
+                        <h1 class="primaryText">SPEAKER SESSIONS!</h1>
+                    </div>
+                    <div class="speakerPhoto">
+                        <img src="./Images/MatlabLogoExample_08.svg" alt="">
+                    </div>
+                </div>
+                <p class="speaker_content">This Trantrsfiesta,
+                    <span class="secondaryText">Robonauts</span> brings to you a workshop on soft robotics addressed by
+                    <span class="secondaryText">Dr. Debanik Roy (BARC)</span> on <span class="secondaryText">
+                        16th
+                        October at 7:00-8:00 pm.</span> <br> Dr. Roy has been associated with the Department of Atomic
+                    Energy
+                    (DAE), Govt. of India. He was with the Robotics division of Bhabha Atomic Research Centre, Mumbai
+                    from 1999 to 2008. Also, Dr. Roy headed the Engineering Science Advisory Committee of the Board of
+                    Research in Nuclear Sciences (BRNS), DAE till April 2018. So hurry up, don’t miss this huge
+                    opportunity to listen to such insightful voice in the field of robotics, and register yourself for
+                    this erudite workshop.
+                </p>
+            </div>
+            <div class="slides">
+                <div class="slideshow">
+                    <div class="speaker">
+                        <div class="butn">
+                            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                             <span class="numbertext primaryText">1/2</span>
                             <a class="next" onclick="plusSlides(1)">&#10095;</a>
                         </div>
@@ -99,34 +127,7 @@
                     robotics and register yourself for this engrossing event.
                 </p>
             </div>
-            <div class="slides">
-                <div class="slideshow">
-                    <div class="speaker">
-                        <div class="butn">
-                            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                            <span class="numbertext primaryText">2/2</span>
-                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                        </div>
-                        <h2 class="secondaryText">by DR.Debrank Roy</h2>
-                        <h1 class="primaryText">SPEAKER SESSIONS!</h1>
-                    </div>
-                    <div class="speakerPhoto">
-                        <img src="./Images/MatlabLogoExample_08.svg" alt="">
-                    </div>
-                </div>
-                <p class="speaker_content">This Trantrsfiesta,
-                    <span class="secondaryText">Robonauts</span> brings to you a workshop on soft robotics addressed by
-                    <span class="secondaryText">Dr. Debanik Roy (BARC)</span> on <span class="secondaryText">
-                        16th
-                        October at 7:00-8:00 pm.</span> <br> Dr. Roy has been associated with the Department of Atomic
-                    Energy
-                    (DAE), Govt. of India. He was with the Robotics division of Bhabha Atomic Research Centre, Mumbai
-                    from 1999 to 2008. Also, Dr. Roy headed the Engineering Science Advisory Committee of the Board of
-                    Research in Nuclear Sciences (BRNS), DAE till April 2018. So hurry up, don’t miss this huge
-                    opportunity to listen to such insightful voice in the field of robotics, and register yourself for
-                    this erudite workshop.
-                </p>
-            </div>
+            
         </div>
         <div class="timer">
             <div class="clock">
