--- a/event.html
+++ b/event.html
@@ -81,7 +81,7 @@
                             <span class="numbertext primaryText">1/2</span>
                             <a class="next" onclick="plusSlides(1)">&#10095;</a>
                         </div>
-                        <h2 class="secondaryText">by DR.Debanikk Roy</h2>
+                        <h2 class="secondaryText">by DR.Debanik Roy</h2>
                         <h1 class="primaryText">SPEAKER SESSIONS!</h1>
                     </div>
                     <div class="speakerPhoto">
