--- a/blog.html
+++ b/blog.html
@@ -103,7 +103,7 @@
     </div>
     <div class="right_footer">
         <p class="subHeading "> <a href="./contact.html"> Contact Us</a> <span class="secondaryText">ROBONAUTS</span>
-            IIITN
+            <a href="https://www.iiitn.ac.in" target="_blank">IIITN</a>
         </p>
     </div>
 </footer>
