--- a/contact.html
+++ b/contact.html
@@ -120,9 +120,9 @@
         <div class="copyright">
             <a class="copy1">COPYRIGHT &copy;</a>
             <a class="copy2"> Reserved</a>
-            <a class="con1" href="../contactus/contact.html">Contact Us</a>
-            <a href="#" class="secondaryText con3">ROBONAUTS</a>
-            <a class="con2">IIITN</a>
+            <a class="con1" href="./contact.html">Contact Us</a>
+            <a href="./index.html" class="secondaryText con3">ROBONAUTS</a>
+            <a href="https://www.iiitn.ac.in" target="_blank" class="con2">IIITN</a>
         </div>
     </footer>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
