--- a/event.html
+++ b/event.html
@@ -51,7 +51,7 @@
             <div class="postercontent">
                 <h1 class="primaryText">WORKSHOP</h1>
                 <h3 class="primaryText">ON ROBOTICS by</h3>
-                <h4 class="primaryText">MATHWORK</h4>
+                <h4 class="primaryText">MATHWORK<sup class="reg">&reg;</sup></h4>
                 <div class="eventdate">
                     <h1 class="primaryText date_1" style=" color: #d18410;">16</h1>
                     <div class="date">
@@ -85,7 +85,7 @@
                         <h1 class="primaryText">SPEAKER SESSIONS!</h1>
                     </div>
                     <div class="speakerPhoto">
-                        <img src="./Images/MatlabLogoExample_08.svg" alt="">
+                        <img src="./Images/roy.jpeg" class="roy" alt="DR.ROY">
                     </div>
                 </div>
                 <p class="speaker_content">This Trantrsfiesta,
@@ -119,15 +119,15 @@
                 <p class="speaker_content">This Trantrsfiesta,
                     <span class="secondaryText">Robonauts</span> brings to you a talk show on robotics which will take a
                     deep dive
-                    into the world of robotic systems addressed by <span class="secondaryText">MATLAB</span> on <span
-                        class="secondaryText">
+                    into the world of robotic systems addressed by <span class="secondaryText">MATLAB<sup
+                            class="reg2">&reg;</sup></span> on <span class="secondaryText">
                         18th
                         October at 2:00-5:00 pm</span>.So hurry
                     up, grab this opportunity and pave the way to learn some interesting things in the field of
                     robotics and register yourself for this engrossing event.
                 </p>
             </div>
-            
+
         </div>
         <div class="timer">
             <div class="clock">
@@ -148,7 +148,7 @@
     </div>
     <div class="right_footer">
         <p class="subHeading "> <a href="./contact.html"> Contact Us</a> <span class="secondaryText">ROBONAUTS</span>
-            IIITN
+            <a href="https://www.iiitn.ac.in" target="_blank">IIITN</a>
         </p>
     </div>
 </footer>
