--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <!-- <li><pre class="subHeading">ROBONAUTS</pre></li> -->
             </div>
             <h3 class="secondaryText">16th OCTOBER,2021 </h3>
-            <a href="./event.html">Expore Events</a>
+            <a href="./event.html">Explore Events</a>
         </div>
     </section>
     <div class="content">
@@ -78,7 +78,7 @@
         <div class="right_footer">
             <p class="subHeading "> <a href="./contact.html"> Contact Us</a> <span
                     class="secondaryText">ROBONAUTS</span>
-                IIITN
+                <a href="https://www.iiitn.ac.in" target="_blank">IIITN</a>
             </p>
         </div>
     </footer>
