--- a/event.html
+++ b/event.html
@@ -113,7 +113,7 @@
                         <h1 class="primaryText">ML Workshop</h1>
                     </div>
                     <div class="speakerPhoto">
-                        <img src="./Images/MatlabLogoExample_08.svg" alt="">
+                        <img src="./Images/lad.jpeg" alt="">
                     </div>
                 </div>
                 <p class="speaker_content">This Trantrsfiesta,
