--- a/event.html
+++ b/event.html
@@ -50,8 +50,8 @@
         <div class="banner">
             <div class="postercontent">
                 <h1 class="primaryText">WORKSHOP</h1>
-                <h3 class="primaryText">ON ROBOTICS by</h3>
-                <h4 class="primaryText">MATHWORK<sup class="reg">&reg;</sup></h4>
+                <h3 class="primaryText">ON MACHINE LEARNING by</h3>
+                <h4 class="primaryText">MathWorks<sup class="reg">&reg;</sup></h4>
                 <div class="eventdate">
                     <h1 class="primaryText date_1" style=" color: #d18410;">16</h1>
                     <div class="date">
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <p class="speaker_content">This Trantrsfiesta,
-                    <span class="secondaryText">Robonauts</span> brings to you a workshop on soft robotics addressed by
+                    <span class="secondaryText">Robonauts</span> brings to you a Tech Talk on soft robotics addressed by
                     <span class="secondaryText">Dr. Debanik Roy (BARC)</span> on <span class="secondaryText">
                         16th
                         October at 7:00-8:00 pm.</span> <br> Dr. Roy has been associated with the Department of Atomic
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <p class="speaker_content">This Trantrsfiesta,
-                    <span class="secondaryText">Robonauts</span> brings to you a talk show on robotics which will take a
+                    <span class="secondaryText">Robonauts</span> brings to you a Workshop on "ML" which will take a
                     deep dive
                     into the world of robotic systems addressed by <span class="secondaryText">MATLAB<sup
                             class="reg2">&reg;</sup></span> on <span class="secondaryText">
