--- a/blog.html
+++ b/blog.html
@@ -50,13 +50,14 @@
             <h3 id="h31">SOFT ROBOTICS</h3>
             <p id="para1">ROBOTICS is a huge branch in itself. Each of its branches have proved to be a great topic for
                 the researchers. One of its sub-branches is Soft-Robotics. This field deals with creating robots that
-                are made up of or some of their parts are made up of complaint(flexible) materials. These robots ensure
+                are made up of or some of their parts are made up of compliant(flexible) materials. These robots ensure
                 more flexibility, adaptability for accomplishing tasks, as well as improved safety when working around
                 humans. Hence they are used in medicine and manufacturing.</p>
         </div>
         <img src="./Images/1div.png" alt="" id="img1">
     </div>
     <div class="p2p">
+        <img src="./Images/2div.png" alt="" id=img2>
         <div class="content2">
             <p id="writer2">By Apoorva</p>
             <h3 id="h32">SENSORS</h3>
@@ -68,7 +69,6 @@
                 position, velocity, acceleration, etc. On the other hand, external sensors tell information about the
                 surrounding environment such as range, force, contact, light, temperature, etc.</p>
         </div>
-        <img src="./Images/2div.png" alt="" id=img2>
     </div>
     <div class="p3p">
         <div class="content3">
