--- a/event.html
+++ b/event.html
@@ -92,13 +92,14 @@
                     <span class="secondaryText">Robonauts</span> brings to you a Tech Talk on soft robotics addressed by
                     <span class="secondaryText">Dr. Debanik Roy (BARC)</span> on <span class="secondaryText">
                         16th
-                        October at 7:00-8:00 pm.</span> <br> Dr. Roy has been associated with the Department of Atomic
+                        October at 7:00-8:00 pm.</span> <br> Dr. Roy has been associated with the Department of
+                    Atomic
                     Energy
                     (DAE), Govt. of India. He was with the Robotics division of Bhabha Atomic Research Centre, Mumbai
                     from 1999 to 2008. Also, Dr. Roy headed the Engineering Science Advisory Committee of the Board of
                     Research in Nuclear Sciences (BRNS), DAE till April 2018. So hurry up, don’t miss this huge
                     opportunity to listen to such insightful voice in the field of robotics, and register yourself for
-                    this erudite workshop.
+                    this erudite tech talk.
                 </p>
             </div>
             <div class="slides">
@@ -144,10 +145,11 @@
 </body>
 <footer>
     <div class="copyright">
-        <p class="subHeading ">COPYRIGHT &copy; Reserved</p>
+        <p class="subHeading margin-left">COPYRIGHT &copy; Reserved</p>
     </div>
     <div class="right_footer">
-        <p class="subHeading "> <a href="./contact.html"> Contact Us</a> <span class="secondaryText">ROBONAUTS</span>
+        <p class="subHeading margin-right"> <a href="./contact.html"> Contact Us</a> <span
+                class="secondaryText">ROBONAUTS</span>
             <a href="https://www.iiitn.ac.in" target="_blank">IIITN</a>
         </p>
     </div>
