--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     </div>
     <footer>
         <div class="copyright">
-            <p class="subHeading ">COPYRIGHT &copy; Reserved</p>
+            <p class="subHeading margin-left">COPYRIGHT &copy; Reserved</p>
         </div>
-        <div class="right_footer">
-            <p class="subHeading "> <a href="./contact.html"> Contact Us</a> <span
+        <div class="right_footer ">
+            <p class="subHeading margin-right"> <a href="./contact.html"> Contact Us</a> <span
                     class="secondaryText">ROBONAUTS</span>
                 <a href="https://www.iiitn.ac.in" target="_blank">IIITN</a>
             </p>
