--- a/event.html
+++ b/event.html
@@ -1,159 +1,607 @@
-<!DOCTYPE html>
-<html lang="en">
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Exo 2", sans-serif;
+}
+body {
+  overflow-x: hidden;
+}
+.secondaryText {
+  font-family: "Raleway", sans-serif;
+  color: #d18410;
+}
+.subHeading {
+  color: white;
+  font-family: "Raleway", sans-serif;
+}
+.primaryText {
+  color: black;
+  font-family: "Judson", serif;
+}
+.header {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  background-color: black;
+  height: 15vh;
+}
+.logo {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin-top: 0.2rem;
+  margin-left: 1rem;
+  width: 40%;
+  overflow-y: hidden;
+}
+.logo a {
+  text-decoration: none;
+}
+.logo img {
+  object-fit: contain;
+  height: 3rem;
+  width: 10rem;
+  cursor: pointer;
+}
+.logo h4 {
+  font-style: italic;
+  font-size: 0.6rem;
+}
+#navbar {
+  height: 10vh;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+}
+.navlinks {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+#navbar li {
+  list-style: none;
+}
+#navbar li a {
+  text-decoration: none;
+}
+#navbar a:hover {
+  color: gray;
+}
+#navbar .current {
+  color: #d18410;
+}
+#evn {
+  color: #d18410;
+  text-align: center;
+  /* padding-right: 6rem; */
+  background-color: black;
+  padding-bottom: 0.5rem;
+  font-size: 3.5rem;
+}
+#poster {
+  margin: 1rem 6rem 1rem 6rem;
+  border-radius: 2rem;
+  height: 28rem;
+  background: rgb(223, 219, 219);
+}
+.banner {
+  display: flex;
+  border-bottom: 0.25rem solid black;
+  margin: 0rem 2rem;
+}
+.banner img {
+  height: 22rem;
+  width: 23rem;
+  padding-top: 1rem;
+  padding-left: 4.5rem;
+}
+.postercontent {
+  line-height: 3.8rem;
+  padding-bottom: 3rem;
+}
+.postercontent h1 {
+  padding-left: 5rem;
+  padding-top: 1.5rem;
+  font-size: 6rem;
+  font-weight: 700;
+  color: black;
+  padding-bottom: 1rem;
+}
+.postercontent h3 {
+  padding-left: 7rem;
+  font-size: 2.2rem;
+  font-weight: 300;
+  color: rgb(15, 15, 15);
+}
+.postercontent h4 {
+  padding-left: 12.5rem;
+  font-size: 2.2rem;
+  line-height: 1.5rem;
+  font-weight: 300;
+  color: rgb(15, 15, 15);
+}
+.eventdate {
+  display: flex;
+  margin-top: 3.5rem;
+}
+.eventdate h1 {
+  padding-left: 8rem;
+  font-weight: 400;
+  font-size: 3rem;
+  font-family: "Open Sans", sans-serif;
+}
+.date h3 {
+  padding: 0rem;
+  font-weight: 300;
+  font-family: "Raleway", sans-serif;
+  padding-right: 1rem;
+  border-right: 0.2rem solid black;
+  font-size: 2rem;
+  line-height: 2rem;
+}
+.date {
+  display: flex;
+  flex-direction: column;
+  padding-top: 1.5rem;
+  padding-left: 1rem;
+}
+.time {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.2rem;
+  margin-left: 0.5rem;
+  line-height: 2.3rem;
+}
+.time h3 {
+  padding: 0rem;
+  font-size: 1.5rem;
+  padding-left: 0.9rem;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+}
+.time h2 {
+  font-size: 2.4rem;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  color: #d18410;
+}
+.organised {
+  margin-left: 2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+  font-family: "Raleway", sans-serif;
+}
+.organised h1 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-left: 0.3rem;
+  font-family: "Raleway", sans-serif;
+}
+.organised h2 {
+  margin-left: 28rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  font-family: "Raleway", sans-serif;
+}
+.Event {
+  display: flex;
+  /* height: 80vh; */
+}
+.session {
+  width: 52%;
+  height: 27rem;
+  padding-left: 6rem;
+  padding-top: 1rem;
+  margin-top: 1rem;
+  border-right: 0.2rem solid black;
+  margin-bottom: 4rem;
+}
+.reg {
+  font-size: 1.5rem;
+}
+.reg2 {
+  font-size: 1rem;
+}
+.roy {
+  border-radius: 0.5rem;
+}
+.slideshow {
+  display: flex;
+}
+.speaker {
+  display: flex;
+  flex-direction: column;
+  line-height: 2.5rem;
+}
+.btn {
+  display: flex;
+}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EVENTS</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Judson:wght@400;700&display=swap" rel="stylesheet">
+.speaker h2 {
+  padding-top: 0.5rem;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+.speaker h1 {
+  padding-top: 1rem;
+  max-width: 1rem;
+  font-size: 3.2rem;
+}
+.speakerPhoto img {
+  padding-left: 15.8rem;
+  padding-bottom: 2rem;
+  height: 12.5rem;
+}
+.slides {
+  display: none;
+}
+.slides p {
+  font-size: 1.1rem;
+  padding-right: 2.9rem;
+  font-weight: 500;
+}
+.slides p span {
+  font-weight: 600;
+}
+.prev,
+.next {
+  cursor: pointer;
+  font-size: 1.5rem;
+  padding: 0.2rem;
+}
+.numbertext {
+  font-size: 2rem;
+}
+.timer {
+  margin-left: 3.1rem;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.clock {
+  /* background-color: rgb(223, 219, 219); */
+  height: 10rem;
+  width: 25.1rem;
+  border-radius: 2rem;
+}
+#timers {
+  padding: 1.7rem;
+  text-align: center;
+  font-size: 2rem;
+  background-color: #d18410;
+  color: white;
+  font-family: "Judson", sans-serif;
+  border-radius: 0.6rem;
+}
+.registration {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.registration h2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 1.8rem;
+  margin-top: 0.2rem;
+  text-align: center;
+}
+.registration button {
+  background-color: #007bffc0;
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/event.css">
-</head>
+  width: 18rem;
+  border-radius: 0.4rem;
+  margin-top: 0.7rem;
+  height: 3rem;
+  color: white;
+  font-family: "Raleway", sans-serif;
+  cursor: pointer;
+  font-size: 1rem;
+  border: none;
+}
+footer {
+  width: 100vw;
+  height: 8vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(37, 37, 37);
+}
+.margin-left {
+  margin-left: 6rem;
+}
+.margin-right {
+  margin-right: 6rem;
+}
+.right_footer p {
+  display: flex;
+  justify-content: space-around;
+}
+.right_footer span {
+  margin-right: 30px;
+}
+.right_footer a {
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+  font-weight: 700;
+  margin-right: 30px;
+}
+.right_footer a:hover {
+  color: gray;
+}
+.burger {
+  display: none;
+  cursor: pointer;
+}
+.line1 {
+  background-color: rgb(240, 188, 188);
+  padding: 2px;
+  margin: 5px;
+  width: 40px;
+}
+.line2 {
+  background-color: whitesmoke;
+  padding: 2px;
+  margin: 5px;
+  width: 40px;
+}
+.line3 {
+  width: 40px;
+  background-color: whitesmoke;
+  padding: 2px;
+  margin: 5px;
+}
+.speaker_content {
+  text-align: justify;
+}
+/* RESPPONSIVE */
+@media screen and (max-width: 720px) {
+  body {
+    overflow-x: hidden;
+  }
+  #navbar {
+    width: 60%;
+  }
+  .navlinks {
+    position: absolute;
+    top: 15vh;
+    flex-direction: column;
+    align-items: center;
+    height: 50vh;
+    width: 65%;
+    background-color: rgb(58, 58, 58);
+    transform: translateX(100%);
+    transition: all 0.3s ease-out;
+    z-index: 11;
+    display: none;
+  }
+  .navlinks li:hover {
+    color: gray;
+  }
+  .logo img {
+    padding-left: 0rem;
+    object-fit: contain;
+    height: 3rem;
+    width: 8rem;
+  }
+  .logo h4 {
+    font-size: 0.6rem;
+    padding-left: 0.7rem;
+    margin-top: -0.3rem;
+  }
+  .burger {
+    display: block;
+    overflow: hidden;
+    margin-top: 2rem;
+    color: tomato;
+    margin-right: 2rem;
+  }
+  #evn {
+    padding-bottom: 0.5rem;
+    font-size: 2rem;
+  }
+  #poster {
+    margin: 1rem 1rem 1rem 2rem;
+    border-radius: 1rem;
+    height: 14rem;
+  }
+  .banner {
+    border-bottom: none;
+    margin: 0rem 2rem;
+  }
+  .banner img {
+    height: 4rem;
+    width: 4rem;
+    padding-top: 0rem;
+    padding-left: 0.3rem;
+    margin-top: 5.5rem;
+    /* margin-left: 15rem; */
+  }
+  .postercontent {
+    line-height: 1rem;
+    padding-bottom: 1rem;
+  }
+  .postercontent h1 {
+    padding-left: 2.8rem;
+    padding-top: 1rem;
+    font-size: 1.5rem;
+    /* padding-bottom: 1rem; */
+  }
+  .reg {
+    font-size: 0.7rem;
+  }
+  .reg2 {
+    font-size: 0.7rem;
+  }
+  .postercontent h3 {
+    padding-left: 3.5rem;
+    font-size: 0.6rem;
+    line-height: 1rem;
+  }
+  .postercontent h4 {
+    padding-left: 4rem;
+    font-size: 0.8rem;
+    line-height: 1.5rem;
+  }
+  .eventdate {
+    display: flex;
+    margin-top: 0rem;
+  }
+  .eventdate h1 {
+    margin-left: -3.6rem;
+    font-weight: 400;
+    font-size: 3rem;
+  }
+  .date h3 {
+    font-weight: 800;
+    font-size: 0.6rem;
+    line-height: 0.7rem;
+    margin-left: -0.5rem;
+  }
+  .date {
+    padding-left: 0rem;
+    margin-left: -2.8rem;
+  }
+  .time {
+    margin-top: 1.2rem;
+    line-height: 0.4rem;
+  }
+  .time h3 {
+    font-size: 0.7rem;
+    padding-left: 0.1rem;
+    margin-top: 0.1rem;
+    line-height: 1.5rem;
+  }
+  .time h2 {
+    font-size: 0.7rem;
+    font-weight: 500;
+  }
+  .organised {
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .organised h1 {
+    font-size: 0.6rem;
+    font-weight: 500;
+    margin-left: 0.1rem;
+  }
+  .organised h2 {
+    margin-left: 3.5rem;
+    font-size: 0.6rem;
+    font-weight: 500;
+  }
+  .Event {
+    display: flex;
+    flex-direction: column;
+  }
+  .session {
+    width: 100%;
+    height: 60vh;
+    padding-left: 2rem;
+    margin-top: 0.5rem;
+    border-right: none;
+    margin-bottom: 2rem;
+  }
+  .speaker h2 {
+    width: 100%;
+    padding-top: 0.5rem;
+    font-weight: 600;
+    font-size: 1rem;
+  }
+  .speaker h1 {
+    padding-top: 1rem;
+    max-width: 1rem;
+    font-size: 1rem;
+  }
+  .speakerPhoto img {
+    margin-top: 4rem;
+    padding-left: 1rem;
+    padding-bottom: 2rem;
+    margin-left: 0.1rem;
+    height: 5rem;
+    width: 7rem;
+  }
+  .slides p {
+    font-size: 0.8rem;
+    padding-right: 0rem;
+    margin-right: 4rem;
+  }
+  .clock {
+    height: 7rem;
+    margin-left: 0rem;
+    text-align: center;
+    width: 19rem;
+  }
+  .registration {
+    height: 30vh;
+    margin-left: -2rem;
+  }
+  .registration h2 {
+    font-weight: 600;
+    font-size: 2rem;
+    margin-top: 0rem;
+    text-align: center;
+  }
+  .registration button {
+    background-color: rgb(96, 96, 228);
+    width: 100%;
+    margin-top: 0.7rem;
+    height: 2.5rem;
+  }
+  #timers {
+    padding: 1rem 0.6rem;
+    font-size: 1rem;
+    border-radius: 0.6rem;
+    width: 80%;
+  }
+  footer {
+    justify-content: space-around;
+  }
+  .margin-left {
+    margin-left: 0.1rem;
+  }
+  .margin-right {
+    margin-right: 0.1rem;
+  }
+  .right_footer p {
+    font-size: 0.6rem;
+    margin-right: 8px;
+  }
+  .right_footer span {
+    font-size: 0.6rem;
+    margin-right: 8px;
+  }
+  .right_footer a {
+    margin-right: 8px;
+    font-size: 0.6rem;
+  }
+  .copyright p {
+    font-size: 0.6rem;
+  }
+  .copyright {
+    padding: 5px;
+  }
+  .right_footer {
+    padding: 5px;
+    width: 55%;
+  }
+}
+.nav-active {
+  transform: translateX(0%);
+  display: flex;
+}
 
-<body>
-    <div class="header">
-        <div class="logo">
-            <a href="index.html">
-                <img src="./Images/logo.jpeg">
-                <h4 class="secondaryText">Iotics and Robotics </h4>
-            </a>
-        </div>
-        <div id="navbar">
-            <ul class="navlinks">
-                <li><a href="index.html" class="subHeading ">HOME</a></li>
-                <li><a href="./event.html" class="subHeading current">EVENT</a></li>
-                <li><a href="./blog.html" class="subHeading">BLOGS</a></li>
-                <li> <a href="./contact.html" class="subHeading">CONTACT US</a></li>
-            </ul>
-        </div>
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-    </div>
-    <h1 class="primaryText" id="evn">EVENT</h1>
-    <div id="poster">
-        <div class="banner">
-            <div class="postercontent">
-                <h1 class="primaryText">WORKSHOP</h1>
-                <h3 class="primaryText">ON MACHINE LEARNING by</h3>
-                <h4 class="primaryText">MathWorks<sup class="reg">&reg;</sup></h4>
-                <div class="eventdate">
-                    <h1 class="primaryText date_1" style=" color: #d18410;">16</h1>
-                    <div class="date">
-                        <h3 class="primaryText">OCT</h3>
-                        <h3 class="primaryText">2021</h3>
-                    </div>
-                    <div class="time">
-                        <h2>7:00-8:00 PM</h2>
-                        <h3>Duration - 1 Hrs</h3>
-                    </div>
-                </div>
-            </div>
-            <img src="Images/Matlab_Logo.png" alt="">
-        </div>
-        <div class="organised">
-            <h1>Workshop On Machine Learning</h1>
-            <h2>Organised By Robonauts</h2>
-        </div>
-    </div>
-    <div class="Event">
-        <div class="session">
-            <div class="slides">
-                <div class="slideshow">
-                    <div class="speaker">
-                        <div class="butn">
-                            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                            <span class="numbertext primaryText">1/2</span>
-                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                        </div>
-                        <h2 class="secondaryText">by DR.Debanik Roy</h2>
-                        <h1 class="primaryText">SPEAKER SESSIONS!</h1>
-                    </div>
-                    <div class="speakerPhoto">
-                        <img src="./Images/roy.jpeg" class="roy" alt="DR.ROY">
-                    </div>
-                </div>
-                <p class="speaker_content">This Trantrsfiesta,
-                    <span class="secondaryText">Robonauts</span> brings to you a Tech Talk on soft robotics addressed by
-                    <span class="secondaryText">Dr. Debanik Roy (BARC)</span> on <span class="secondaryText">
-                        16th
-                        October at 7:00-8:00 pm.</span> <br> Dr. Roy has been associated with the Department of
-                    Atomic
-                    Energy
-                    (DAE), Govt. of India. He was with the Robotics division of Bhabha Atomic Research Centre, Mumbai
-                    from 1999 to 2008. Also, Dr. Roy headed the Engineering Science Advisory Committee of the Board of
-                    Research in Nuclear Sciences (BRNS), DAE till April 2018. So hurry up, don’t miss this huge
-                    opportunity to listen to such insightful voice in the field of robotics, and register yourself for
-                    this erudite tech talk.
-                </p>
-            </div>
-            <div class="slides">
-                <div class="slideshow">
-                    <div class="speaker">
-                        <div class="butn">
-                            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                            <span class="numbertext primaryText">2/2</span>
-                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                        </div>
-                        <h2 class="secondaryText">by DR.Pranav Lad</h2>
-                        <h1 class="primaryText">ML Workshop</h1>
-                    </div>
-                    <div class="speakerPhoto">
-                        <img src="./Images/lad.jpeg" alt="">
-                    </div>
-                </div>
-                <p class="speaker_content">This Trantrsfiesta,
-                    <span class="secondaryText">Robonauts</span> brings to you a Workshop on "ML" which will take a
-                    deep dive
-                    into the world of robotic systems addressed by <span class="secondaryText">MATLAB<sup
-                            class="reg2">&reg;</sup></span> on <span class="secondaryText">
-                        18th
-                        October at 2:00-5:00 pm</span>.So hurry
-                    up, grab this opportunity and pave the way to learn some interesting things in the field of
-                    robotics and register yourself for this engrossing event.
-                </p>
-            </div>
-
-        </div>
-        <div class="timer">
-            <div class="clock">
-                <p id="timers"></p>
-            </div>
-            <div class="registration">
-                <h2>HURRY UP FOR</h2>
-                <h2>REGISTRATION!</h2>
-                <button>REGISTER</button>
-            </div>
-        </div>
-    </div>
-
-</body>
-<footer>
-    <div class="copyright">
-        <p class="subHeading margin-left">COPYRIGHT &copy; Reserved</p>
-    </div>
-    <div class="right_footer">
-        <p class="subHeading margin-right"> <a href="./contact.html"> Contact Us</a> <span
-                class="secondaryText">ROBONAUTS</span>
-            <a href="https://www.iiitn.ac.in" target="_blank">IIITN</a>
-        </p>
-    </div>
-</footer>
-<script src="./JS/event.js"></script>
-
-</html>
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-6px, 6px);
+}
+.toggle .line2 {
+  opacity: 0;
+}
+.toggle .line3 {
+  transform: rotate(45deg) translate(-6px, -6px);
+}
