--- a/event.html
+++ b/event.html
@@ -137,7 +137,7 @@
             <div class="registration">
                 <h2>HURRY UP FOR</h2>
                 <h2>REGISTRATION!</h2>
-                <button>REGISTER</button>
+                <a href="https://forms.gle/zrWXxagBMuVo2sM98" target="_blank"><button>REGISTER</button></a>
             </div>
         </div>
     </div>
