--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -26,7 +29,7 @@
                 <div class="logo">
                     <a href="./index.html">
                         <img src="./Images/logo-removebg-preview.png" alt="">
-                        <h4 class="logo123">Iotics and Robotics </h4>
+                        <h4 class="logo123">IoT and Robotics </h4>
                     </a>
                 </div>
                 <div id="navbar">
@@ -116,19 +119,34 @@
             </div>
         </section>
     </div>
-    <footer>
-        <div class="copyright">
-            <a class="copy1">COPYRIGHT &copy;</a>
-            <a class="copy2"> Reserved</a>
-            <a class="con1" href="./contact.html">Contact Us</a>
-            <a href="./index.html" class="secondaryText con3">ROBONAUTS</a>
-            <a href="https://www.iiitn.ac.in" target="_blank" class="con2">IIITN</a>
-        </div>
-    </footer>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <!-- <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script> -->
     <script src="./JS/contact.js"></script>
 </body>
+<footer>
+    <div class="foot_logo">
+        <img src="./Images/logo.png">
+    </div>
+    <div class="cont_foot">
+        <div class="links_foot">
+            <a href="./index.html" class="link_foot">HOME</a>
+            <a href="https://iiitn.ac.in" class="link_foot">IIITN</a>
+        </div>
+        <div class="icons_foot">
+            <a href="https://www.instagram.com/robonauts_iiitn" target="_blank"> <i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/robonauts" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="mailto:robonauts@iiitn.ac.in" target="_blank"><i class="far fa-envelope"></i></a>
+        </div>
+        <div class="links_foot">
+            <a href="./contact.html" class="link_foot">CONTACT US</a>
+            <a href="./event.html" class="link_foot">EVENT</a>
+        </div>
+    </div>
+    <div class="regis">
+        <a href="https://forms.gle/zrWXxagBMuVo2sM98" target="_blank"><button class="btn_register">REGISTER
+                NOW</button></a>
+    </div>
+</footer>
 
 </html>
