--- a/event.html
+++ b/event.html
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/event.css">
 </head>
 
@@ -28,7 +29,7 @@
         <div class="logo">
             <a href="index.html">
                 <img src="./Images/logo.jpeg">
-                <h4 class="secondaryText">Iotics and Robotics </h4>
+                <h4 class="secondaryText">IoT and Robotics </h4>
             </a>
         </div>
         <div id="navbar">
@@ -141,19 +142,33 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <div class="foot_logo">
+            <img src="./Images/logo.png">
+        </div>
+        <div class="cont">
+            <div class="links">
+                <a href="./index.html" class="link">HOME</a>
+                <a href="https://iiitn.ac.in" class="link">IIITN</a>
+            </div>
+            <div class="icons">
+                <a href="https://www.instagram.com/robonauts_iiitn" target="_blank"> <i
+                        class="fab fa-instagram"></i></a>
+                <a href="https://github.com/robonauts" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="mailto:robonauts@iiitn.ac.in" target="_blank"><i class="far fa-envelope"></i></a>
+            </div>
+            <div class="links">
+                <a href="./contact.html" class="link">CONTACT US</a>
+                <a href="./event.html" class="link">EVENT</a>
+            </div>
+        </div>
+        <div class="regis">
+            <a href="https://forms.gle/zrWXxagBMuVo2sM98" target="_blank"><button class="btn_register">REGISTER
+                    NOW</button></a>
+        </div>
+    </footer>
 </body>
-<footer>
-    <div class="copyright">
-        <p class="subHeading margin-left">COPYRIGHT &copy; Reserved</p>
-    </div>
-    <div class="right_footer">
-        <p class="subHeading margin-right"> <a href="./contact.html"> Contact Us</a> <span
-                class="secondaryText">ROBONAUTS</span>
-            <a href="https://www.iiitn.ac.in" target="_blank">IIITN</a>
-        </p>
-    </div>
-</footer>
+
 <script src="./JS/event.js"></script>
 
 </html>
