--- a/blog.html
+++ b/blog.html
@@ -93,7 +93,7 @@
             <div class="qual">
                 <p id="mname">Dr. Prasad Joshi</p>
                 <p id="prof">Assitant Professor(IIIT NAGPUR)</p>
-                <p id="phd">Ph.D. Solid Meachanics NIT Raipur(2015) </p>
+                <p id="phd">Ph.D. Solid Mechanics NIT Raipur(2015) </p>
                 <p id="mtech">M. Tech NIT Kurukshetra(2001)</p>
             </div>
         </div>
