--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROBONAUTS</title>
-        <link rel="icon" href="./Images/icon.png" type="image/x-icon">
+    <link rel="icon" href="./Images/icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Judson&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-
+    <div id="loader"></div>
     <section class="home">
         <div class="header">
             <div class="logo">
@@ -99,6 +99,16 @@
         </div>
     </footer>
     <script src="./JS/index.js"></script>
+    <script>
+        let loader = document.getElementById("loader");
+        window.addEventListener("load", function () {
+            loader.style.display = "none";
+        })
+        let body = document.querySelector("body");
+        window.addEventListener("load", function () {
+            body.style.overflow = "none";
+        })
+    </script>
 </body>
 
 </html>
